RESOLVED FIXED312503
REGRESSION(311380@main): Build failure, m_isinFullscreenOrPictureInPicture
https://bugs.webkit.org/show_bug.cgi?id=312503
Summary REGRESSION(311380@main): Build failure, m_isinFullscreenOrPictureInPicture
Jer Noble
Reported 2026-04-16 13:04:13 PDT
REGRESSION(311380@main): Build failure, m_isinFullscreenOrPictureInPicture
Attachments
Jer Noble
Comment 1 2026-04-16 13:04:14 PDT
Jer Noble
Comment 2 2026-04-16 13:06:35 PDT
EWS
Comment 3 2026-04-16 13:10:17 PDT
Committed 311398@main (e85d2ba4208e): <https://commits.webkit.org/311398@main> Reviewed commits have been landed. Closing PR #62914 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.