REGRESSION(311380@main): Build failure, m_isinFullscreenOrPictureInPicture rdar://174945262 https://bugs.webkit.org/show_bug.cgi?id=312503

Unreviewed build fix. Fix an incorrectly cased ivar in MediaPlayerPrivateAVFoundationObjC.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:

Canonical link: https://commits.webkit.org/311398@main